// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`doesn't strip whitespace when it's set not to 1`] = `
<pre
  key="0"
>
  <code>
    Header 1
========

A paragraph starts here.  *This is italicized.*

  </code>
</pre>
`;

exports[`handles custom rules 1`] = `
<p
  key="0"
>
  Hay 
  <i
    key="1"
  >
    needle
  </i>
   stack
</p>
`;

exports[`handles passing an instance of markdown-it to props 1`] = `
<p
  key="0"
>
  Hay 
  <i
    key="1"
  >
    needle
  </i>
   stack
</p>
`;

exports[`handles some basic rules 1`] = `
Array [
  <h1
    key="0"
  >
    Header 1
  </h1>,
  <p
    key="3"
  >
    A paragraph starts here.  
    <em
      key="1"
    >
      This is italicized.
    </em>
  </p>,
  <pre
    key="2"
  >
    <code>
      This is a code block.

    </code>
  </pre>,
]
`;

exports[`properly handles new-lines 1`] = `
Array [
  <p
    key="0"
  >
    This is a paragraph.
    

    It does not have a newline.
  </p>,
  <p
    key="3"
  >
    This is a paragraph.
    <br />
    

    It does have a newline.
  </p>,
]
`;

exports[`uses props specified by overwriting ReactifyMarkdown.defaultProps 1`] = `
<p>
  Hay 
  <i>
    needle
  </i>
   stack
</p>
`;

exports[`uses props specified by overwriting ReactifyMarkdown.defaultProps 2`] = `
<p>
  Hay 
  <em>
    needle
  </em>
   stack
</p>
`;

exports[`uses props specified by overwriting ReactifyMarkdown.defaultProps 3`] = `
<p>
  Hay 
  <em>
    needle
  </em>
   stack
</p>
`;

exports[`uses props specified by overwriting ReactifyMarkdown.defaultProps 4`] = `
<p>
  Hay 
  <em>
    needle
  </em>
   stack
</p>
`;
